# playerbots

./: CMakeLists.txt  botpch.h
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
ahbot/: AhBot.h
conf/: aiplayerbot.conf.dist.in  aiplayerbot.conf.dist.in.tbc  aiplayerbot.conf.dist.in.wotlk
docs/: PHASE6_TEST_PLAN.md  WORLD_RPG_MIGRATION_PLAN.md
playerbot/: AiFactory.cpp  AiFactory.h  BotTests.cpp  BroadcastHelper.cpp  ChatFilter.cpp  ChatHelper.cpp  FleeManager.cpp  FleeManager.h  GuidPosition.cpp  GuidPosition.h  LootObjectStack.cpp  LootObjectStack.h  MemoryMonitor.cpp  PerformanceMonitor.cpp  PerformanceMonitor.h  PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotCommandServer.cpp  PlayerbotCommandServer.h  PlayerbotDbStore.cpp  PlayerbotDbStore.h  PlayerbotFactory.cpp  PlayerbotHelpMgr.cpp  PlayerbotHelpMgr.h  PlayerbotLLMInterface.cpp  PlayerbotLoginMgr.cpp  PlayerbotLoginMgr.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotTextMgr.cpp  PlayerbotTextMgr.h  RandomItemMgr.cpp  RandomItemMgr.h  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h  RandomPlayerbotMgr.cpp  (+15 more)
playerbot/strategy/: StrategyContext.h
playerbot/strategy/actions/: AcceptInvitationAction.h  ActionContext.h  BattleGroundJoinAction.cpp  ChangeTalentsAction.cpp  ChooseRpgTargetAction.cpp  ChooseTravelTargetAction.cpp  DebugAction.cpp  DungeonActions.cpp  DungeonActions.h  FollowActions.cpp  GoAction.cpp  LeaveGroupAction.cpp  MoveToTravelTargetAction.cpp  MovementActions.cpp  RangeAction.cpp  SayAction.cpp
playerbot/strategy/dungeons/: DUNGEON_GUIDE copy.md  DUNGEON_GUIDE.md  DUNGEON_PLAN copy.md  DUNGEON_PLAN.md  INTERRUPT_PLAN.md
playerbot/strategy/dungeons/BlackfathomDeeps/: BFD_PLAN.md
playerbot/strategy/dungeons/BlackrockDepths/: BRD_PLAN.md
playerbot/strategy/dungeons/BlackrockSpire/: BRS_PLAN.md
playerbot/strategy/dungeons/Deadmines/: DM_PLAN.md
playerbot/strategy/dungeons/DireMaul/: DM_PLAN.md
playerbot/strategy/dungeons/Gnomeregan/: Gnomer_PLAN.md
playerbot/strategy/dungeons/Maraudon/: MARA_PLAN.md
playerbot/strategy/dungeons/RagefireChasm/: RFC_PLAN.md
playerbot/strategy/dungeons/RazorfenDowns/: RFD_PLAN.md
playerbot/strategy/dungeons/RazorfenKraul/: RFK_PLAN.md
playerbot/strategy/dungeons/ScarletMonastery/: SM_PLAN.md
playerbot/strategy/dungeons/Scholomance/: SCHOLO_PLAN.md
playerbot/strategy/dungeons/ShadowfangKeep/: SFK_PLAN.md
playerbot/strategy/dungeons/Stockade/: Stocks_PLAN.md
playerbot/strategy/dungeons/Stratholme/: STRAT_PLAN.md
playerbot/strategy/dungeons/TempleOfAtalHakkar/: ST_PLAN.md
playerbot/strategy/dungeons/Uldaman/: ULDA_PLAN.md
playerbot/strategy/dungeons/WailingCaverns/: WC_PLAN.md
playerbot/strategy/dungeons/ZulFarrak/: ZF_PLAN.md
playerbot/strategy/generic/: DungeonStrategy.cpp
playerbot/strategy/raid/: RAID_GUIDE.md  RAID_PLAN.md
playerbot/strategy/raid/ZulGurub/: ZG_PLAN.md
playerbot/strategy/rpg/: NewRpgInfo.cpp  NewRpgInfo.h
playerbot/strategy/rpg/Action/: NewRpgAction.cpp  NewRpgBaseAction.cpp  NewRpgBaseAction.h
playerbot/strategy/rpg/Strategy/: NewRpgStrategy.cpp  NewRpgStrategy.h
playerbot/strategy/rpg/Trigger/: NewRpgTriggers.cpp  NewRpgTriggers.h
playerbot/strategy/tests/: MovementMonitors.h  PartyCommands.cpp  PartyCommands.h  TestAction.cpp  TestContext.h  TestMonitor.cpp  TestRegistry.cpp
playerbot/strategy/triggers/: ChatTriggerContext.h  DungeonTriggers.cpp  DungeonTriggers.h  TriggerContext.h
playerbot/strategy/values/: ValueContext.h
playerbot/strategy/warrior/: WarriorActions.h
src/AhBot/: AhBot.cpp  AhBot.h  Category.cpp  PricingStrategy.cpp  TradeCategory.cpp
src/Ai/Base/: Action.cpp  Action.h  ActionBasket.cpp  AiObject.cpp  AiObject.h  AiObjectContext.cpp  AiObjectContext.h  CustomStrategy.cpp  Engine.cpp  Engine.h  Event.cpp  ExternalEventHelper.h  ItemVisitors.h  Multiplier.cpp  PassiveMultiplier.cpp  Queue.cpp  ReactionEngine.cpp  Strategy.cpp  Strategy.h  StrategyContext.h  Trigger.cpp  Value.cpp  Value.h
src/Ai/Base/actions/: AcceptBattleGroundInvitationAction.h  AcceptDuelAction.h  AcceptInvitationAction.h  AcceptQuestAction.cpp  AcceptQuestAction.h  AcceptResurrectAction.h  ActionContext.h  AddLootAction.cpp  AhAction.cpp  AreaTriggerAction.cpp  AreaTriggerAction.h  ArenaTeamActions.cpp  ArenaTeamActions.h  AttackAction.cpp  AttackAction.h  AutoCompleteQuestAction.cpp  AutoLearnSpellAction.cpp  AutoLearnSpellAction.h  BankAction.cpp  BattleGroundJoinAction.cpp  BattleGroundJoinAction.h  BattleGroundTactics.cpp  BattleGroundTacticsAV.cpp  BotStateActions.cpp  BotStateActions.h  BuffAction.cpp  BuyAction.cpp  BuyAction.h  CastCustomSpellAction.cpp  CastCustomSpellAction.h  ChangeChatAction.cpp  ChangeStrategyAction.cpp  ChangeTalentsAction.cpp  ChangeTalentsAction.h  ChatActionContext.h  (+185 more)
src/Ai/Dungeon/: DUNGEON_PLAN copy.md
src/Bot/: PlayerbotAIConfig.cpp  PlayerbotAIConfig.h  PlayerbotLLMInterface.cpp
src/Bot/Cmd/: PlayerbotCommandServer.cpp  PlayerbotCommandServer.h
src/Bot/Debug/: BotTests.cpp  MemoryMonitor.cpp  PerformanceMonitor.cpp  PerformanceMonitor.h
src/Bot/Engine/: PlayerbotAI.cpp  PlayerbotAI.h  PlayerbotAIBase.cpp  PlayerbotAIBase.h  playerbot.h
src/Bot/Factory/: AiFactory.cpp  AiFactory.h  PlayerbotFactory.cpp  RandomPlayerbotFactory.cpp  RandomPlayerbotFactory.h
src/Db/: PlayerbotDbStore.cpp  PlayerbotDbStore.h
src/Mgr/: FleeManager.cpp  FleeManager.h  LootObjectStack.cpp  LootObjectStack.h  PlayerbotHelpMgr.cpp  PlayerbotHelpMgr.h  PlayerbotLoginMgr.cpp  PlayerbotLoginMgr.h  PlayerbotMgr.cpp  PlayerbotMgr.h  PlayerbotSecurity.cpp  PlayerbotTextMgr.cpp  PlayerbotTextMgr.h  RandomItemMgr.cpp  RandomItemMgr.h  RandomPlayerbotMgr.cpp  RandomPlayerbotMgr.h  Talentspec.cpp  TravelMgr.cpp  TravelMgr.h  TravelNode.cpp  TravelNode.h
src/Util/: BroadcastHelper.cpp  ChatFilter.cpp  ChatHelper.cpp  GuidPosition.cpp  GuidPosition.h  Helpers.cpp  ServerFacade.cpp  ServerFacade.h  WorldPosition.cpp  WorldSquare.cpp  WorldSquare.h
(+615 files in other folders)
